--- a/public/publication/variations-on-a-theme-evolution-of-the-phage-shock-protein-system-in-actinobacteria/index.html
+++ b/public/publication/variations-on-a-theme-evolution-of-the-phage-shock-protein-system-in-actinobacteria/index.html
@@ -340,7 +340,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In <em>Antonie Van Leeuwenhoek</em>, Springer</div>
+          <div class="col-xs-12 col-sm-9"><em>Antonie Van Leeuwenhoek</em>, Springer.</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
